Comments to Uppvärmning

--- a/exercises/Lab1/1.0_Uppvärmning.ipynb
+++ b/exercises/Lab1/1.0_Uppvärmning.ipynb
@@ -130,15 +130,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Förklaring av koden:\n",
+    " <strong> df_ratings.pivot(index=\"movieId\", columns=\"userId\", values=\"rating\"): </strong> <br />\n",
+    "Detta skapar en pivottabell från DataFrame df_ratings.\n",
+    "Detta innebär att varje cell i pivottabellen kommer att innehålla betyget som en viss användare har gett till en viss film.\n",
+    "Om en användare inte har gett ett betyg till en viss film kommer den motsvarande cellen att vara NaN (ej tillämpligt).\n",
+    "NaN-värden ersätts sedan med 0 med fillna(0)-funktionen, vilket resulterar i en matris där 0 representerar att användaren inte har gett något betyg till den givna filmen.\n",
+    "\n",
+    "<strong> csr_matrix(movies_user.values): </strong> <br />\n",
+    "Denna kod omvandlar den resulterande pivottabellen till en gles matris (sparse matrix) av typen csr_matrix från biblioteket scipy.sparse. En \"compresses sparse row matrix\" (CSR-matris) är en typ av gles matris som optimerar lagringen av rader i matrisen. Detta görs genom att lagra endast de icke-nollvärdena och deras positioner."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Spare Matrix\n",
-    "\n",
+    "# Sparse Matrix\n",
     "movies_user=df_ratings.pivot(index=\"movieId\", columns=\"userId\", values=\"rating\").fillna(0)\n",
     "mat_movies_users=csr_matrix(movies_user.values)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Förklaring av kod\n",
+    "<strong> model_knn = NearestNeighbors():</strong> <br />\n",
+    "Skapar en instans av KNN-modellen från scikit-learn-biblioteket. KNN är en algoritm för maskininlärning som används för att lösa klassificerings- och regressionsproblem genom att hitta de närmaste grannarna till en given datapunkt.\n",
+    "\n",
+    "<strong> metric=\"cosine\":</strong> <br />\n",
+    "Specificerar avståndsmåttet som ska användas för att beräkna avståndet mellan datapunkter. I detta fall används \"cosine similarity\" (kosinuslikhet), vilket är ett mått på likhet mellan två vektorer genom att mäta vinkeln mellan dem.\n",
+    "\n",
+    "<strong> algorithm=\"brute\":</strong> <br />\n",
+    "Specificerar algoritmen som ska användas för att hitta de närmaste grannarna. \"Brute force\" (bruteforce) är en enkel metod som innebär att beräkna avståndet mellan alla möjliga par av punkter. Detta kan vara ineffektivt för stora datamängder men fungerar bra för mindre dataset.\n",
+    "\n",
+    "<strong> n_neighbors=20:</strong> <br />\n",
+    "Anger antalet närmaste grannar som ska användas vid förutsägelser. I detta fall kommer modellen att använda de 20 närmaste grannarna för att göra förutsägelser eller rekommendationer."
    ]
   },
   {
@@ -152,6 +184,19 @@
     "# Minkowski Distance \n",
     "# Cosine Similarity\n",
     "model_knn=NearestNeighbors(metric=\"cosine\", algorithm=\"brute\", n_neighbors=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Förklaring av kod \n",
+    "\n",
+    "<strong> model_knn </strong> <br /> är en instans av en KNN-modell. KNN är en enkel, men kraftfull algoritm för både klassificering och regression, men den används oftast för klassificering. Den fungerar genom att hitta de 'k' närmaste observationerna (grannarna) till en given datapunkt och gör en prognos baserat på dessa grannars egenskaper. model_knn kunde ha skapats med hjälp av ett bibliotek som scikit-learn, som är en populär öppen källkods-bibliotek för maskininlärning i Python.\n",
+    "\n",
+    "<strong> .fit() </strong> <br />är en metod som används för att träna modellen med data. I maskininlärning innebär \"träning\" att justera modellens parametrar så att den kan göra noggranna förutsägelser eller beslut baserat på indata. För en KNN-modell innebär detta i huvudsak att lagra datamatrisen så att den kan använda den för att hitta de 'k' närmaste grannarna när en ny datapunkt ska klassificeras eller bedömas.\n",
+    "\n",
+    "<strong> mat_movies_users </strong> <br />är datamatrisen som används för att träna modellen. Namnet antyder att det kan vara en användar-film-matris, vilket är vanligt inom rekommendationssystem. I en sådan matris kan raderna representera filmer och kolumnerna användare (eller tvärtom), med värden som indikerar någon form av interaktion eller betyg från användaren till filmen. Att använda en KNN-modell på en sådan matris kan till exempel hjälpa till att rekommendera filmer till användare baserat på likheter i användarnas beteende eller preferenser."
    ]
   },
   {
@@ -579,6 +624,28 @@
    ],
    "source": [
     "model_knn.fit(mat_movies_users)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Förklaring av kod\n",
+    "<strong>Funktionsdefinition:</strong> Funktionen <strong>recommender</strong> tar fyra argument:<br />\n",
+    "<strong>movie_name:</strong> Namnet på filmen som användaren vill ha rekommendationer för.\n",
+    "<strong>data:</strong> Datamatrisen som används för att hitta rekommendationer. Den antas vara en användar-film-matris eller liknande, där raderna och kolumnerna representerar filmer och användare (eller vice versa), och värdena indikerar användarnas interaktioner eller betyg.\n",
+    "<strong>model:</strong> En instans av en KNN-modell. Denna modell används för att hitta liknande filmer baserat på den specificerade filmens attribut.\n",
+    "<strong>n_recommendations:</strong> Antalet rekommendationer som ska genereras.\n",
+    "\n",
+    "<strong>Modellträning: model.fit(data)</strong> tränar KNN-modellen med den angivna datamatrisen. I kontexten av rekommendationssystem innebär detta förberedelse av modellen för att kunna utföra sökningar efter de närmaste grannarna.\n",
+    "\n",
+    "<strong>Sökning av den angivna filmen: idx = process.extractOne(movie_name, df_movies[\"title\"])[2]</strong> använder en sökalgoritm (förmodligen från ett bibliotek som <strong>fuzzywuzzy</strong>) för att hitta den bäst matchande filmen i datasetet <strong>df_movies</strong> baserat på det angivna <strong>movie_name. idx</strong> är indexet för den matchande filmen i <strong>df_movies</strong>.\n",
+    "\n",
+    "<strong>Utskrifter:</strong> Funktionen skriver ut namnet och indexet för den valda filmen, samt ett meddelande om att rekommendationer håller på att sökas.\n",
+    "\n",
+    "<strong>Hitta och skriva ut rekommendationer:</strong>\n",
+    "<strong>distances, indices = model.kneighbors(data[idx], n_neighbors=n_recommendations)</strong> hittar de <strong>n_recommendations</strong> närmaste grannarna till den valda filmen i datamatrisen. <strong>indices</strong> är indexen för dessa grannar (dvs. de rekommenderade filmerna), och <strong>distances</strong> representerar hur lika varje rekommenderad film är den ursprungliga filmen.\n",
+    "Loopen <strong>for i in indices</strong> går igenom varje index i <strong>indices</strong> och skriver ut titlarna på de rekommenderade filmerna, förutom den ursprungliga filmen. Detta görs genom att kontrollera <strong>where(i!=idx)</strong> för att undvika att inkludera den ursprungliga filmen i rekommendationerna."
    ]
   },
   {
