Added ratings and sorted them

--- a/labs/Lab1/Code_lab1.ipynb
+++ b/labs/Lab1/Code_lab1.ipynb
@@ -36,6 +36,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>110</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>158</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>260</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>356</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33832157</th>\n",
+       "      <td>330975</td>\n",
+       "      <td>8340</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33832158</th>\n",
+       "      <td>330975</td>\n",
+       "      <td>8493</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33832159</th>\n",
+       "      <td>330975</td>\n",
+       "      <td>8622</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33832160</th>\n",
+       "      <td>330975</td>\n",
+       "      <td>8665</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33832161</th>\n",
+       "      <td>330975</td>\n",
+       "      <td>8783</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>33832162 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          userId  movieId  rating\n",
+       "0              1        1     4.0\n",
+       "1              1      110     4.0\n",
+       "2              1      158     4.0\n",
+       "3              1      260     4.5\n",
+       "4              1      356     5.0\n",
+       "...          ...      ...     ...\n",
+       "33832157  330975     8340     2.0\n",
+       "33832158  330975     8493     2.5\n",
+       "33832159  330975     8622     4.0\n",
+       "33832160  330975     8665     3.0\n",
+       "33832161  330975     8783     2.5\n",
+       "\n",
+       "[33832162 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -320,24 +449,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      movieId                                              title\n",
-      "257       260          Star Wars: Episode IV - A New Hope (1977)\n",
-      "292       296                                Pulp Fiction (1994)\n",
-      "314       318                   Shawshank Redemption, The (1994)\n",
-      "351       356                                Forrest Gump (1994)\n",
-      "475       480                               Jurassic Park (1993)\n",
-      "522       527                            Schindler's List (1993)\n",
-      "585       593                   Silence of the Lambs, The (1991)\n",
-      "1166     1196  Star Wars: Episode V - The Empire Strikes Back...\n",
-      "2480     2571                                 Matrix, The (1999)\n",
-      "2867     2959                                  Fight Club (1999)\n"
+      " movieId                                                 title  ratingCount\n",
+      "     318                      Shawshank Redemption, The (1994)       122296\n",
+      "     356                                   Forrest Gump (1994)       113581\n",
+      "     296                                   Pulp Fiction (1994)       108756\n",
+      "    2571                                    Matrix, The (1999)       107056\n",
+      "     593                      Silence of the Lambs, The (1991)       101802\n",
+      "     260             Star Wars: Episode IV - A New Hope (1977)        97202\n",
+      "    2959                                     Fight Club (1999)        86207\n",
+      "     527                               Schindler's List (1993)        84232\n",
+      "     480                                  Jurassic Park (1993)        83026\n",
+      "    1196 Star Wars: Episode V - The Empire Strikes Back (1980)        80200\n"
      ]
     }
    ],
@@ -345,13 +474,20 @@
     "# Count how many times each movieId appears in df_ratings\n",
     "rating_counts = df_ratings[\"movieId\"].value_counts()\n",
     "\n",
-    "# Select 10 movies with the most ratings\n",
+    "# # Select 10 movies with the most ratings\n",
     "movies = rating_counts.head(10)\n",
     "\n",
-    "# Select movies from df_movies that are among the top 10 most-rated using their movieId\n",
-    "top_10_titles = df_movies[df_movies[\"movieId\"].isin(movies.index)]\n",
+    "#Select movies from df_movies that are among the top 10 most-rated using their movieId\n",
+    "top_10_titles = df_movies[df_movies[\"movieId\"].isin(movies.index)].copy()\n",
     "\n",
-    "print(top_10_titles[[\"movieId\", \"title\"]])"
+    "# Add column with number of ratings to top_10_titles\n",
+    "top_10_titles.loc[:,'ratingCount'] = top_10_titles['movieId'].map(rating_counts)\n",
+    "\n",
+    "# Sort by number of ratings\n",
+    "top_10_titles_sorted = top_10_titles.sort_values(by='ratingCount', ascending=False)\n",
+    "\n",
+    "# Skriv ut movieId, titel och ratingCount kolumnerna utan index\n",
+    "print(top_10_titles_sorted[['movieId', 'title', 'ratingCount']].to_string(index=False))"
    ]
   },
   {
