--- a/labs/Lab1/Code_lab1.ipynb
+++ b/labs/Lab1/Code_lab1.ipynb
@@ -449,24 +449,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " movieId                                                 title  ratingCount\n",
-      "     318                      Shawshank Redemption, The (1994)       122296\n",
-      "     356                                   Forrest Gump (1994)       113581\n",
-      "     296                                   Pulp Fiction (1994)       108756\n",
-      "    2571                                    Matrix, The (1999)       107056\n",
-      "     593                      Silence of the Lambs, The (1991)       101802\n",
-      "     260             Star Wars: Episode IV - A New Hope (1977)        97202\n",
-      "    2959                                     Fight Club (1999)        86207\n",
-      "     527                               Schindler's List (1993)        84232\n",
-      "     480                                  Jurassic Park (1993)        83026\n",
-      "    1196 Star Wars: Episode V - The Empire Strikes Back (1980)        80200\n"
+      "                                                Title  Number of ratings\n",
+      "                     Shawshank Redemption, The (1994)             122296\n",
+      "                                  Forrest Gump (1994)             113581\n",
+      "                                  Pulp Fiction (1994)             108756\n",
+      "                                   Matrix, The (1999)             107056\n",
+      "                     Silence of the Lambs, The (1991)             101802\n",
+      "            Star Wars: Episode IV - A New Hope (1977)              97202\n",
+      "                                    Fight Club (1999)              86207\n",
+      "                              Schindler's List (1993)              84232\n",
+      "                                 Jurassic Park (1993)              83026\n",
+      "Star Wars: Episode V - The Empire Strikes Back (1980)              80200\n"
      ]
     }
    ],
@@ -481,13 +481,15 @@
     "top_10_titles = df_movies[df_movies[\"movieId\"].isin(movies.index)].copy()\n",
     "\n",
     "# Add column with number of ratings to top_10_titles\n",
-    "top_10_titles.loc[:,'ratingCount'] = top_10_titles['movieId'].map(rating_counts)\n",
+    "top_10_titles.loc[:,'Number of ratings'] = top_10_titles['movieId'].map(rating_counts)\n",
     "\n",
     "# Sort by number of ratings\n",
-    "top_10_titles_sorted = top_10_titles.sort_values(by='ratingCount', ascending=False)\n",
+    "top_10_titles_sorted = top_10_titles.sort_values(by='Number of ratings', ascending=False)\n",
     "\n",
-    "# Skriv ut movieId, titel och ratingCount kolumnerna utan index\n",
-    "print(top_10_titles_sorted[['movieId', 'title', 'ratingCount']].to_string(index=False))"
+    "# Change name of columns \n",
+    "top_10_titles_sorted = top_10_titles_sorted.rename(columns={'title': 'Title'})\n",
+    "\n",
+    "print(top_10_titles_sorted[['Title', 'Number of ratings']].to_string(index=False))"
    ]
   },
   {
