Calculate mean rating per movie

--- a/labs/Lab1/Code_lab1.ipynb
+++ b/labs/Lab1/Code_lab1.ipynb
@@ -22,6 +22,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 - Movielens full - EDA\n",
+    "Nu ska du ladda ned datasetet ml-latest.zip under sektionen \"recommended for education and\n",
+    "development\". Läs in dataseten \"movies.csv\" och \"ratings.csv\" besvara på följande frågorna nedan.\n",
+    "\n",
+    "a) Gör en EDA för att förstå datasetet. Inkludera olika slags plots. Begränsa dig inte till frågorna nedan,\n",
+    "utan försök undersöka fler aspekter av datan."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -448,6 +460,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) Vilka är de 10 filmerna med flest ratings?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -490,6 +509,47 @@
     "top_10_titles_sorted = top_10_titles_sorted.rename(columns={'title': 'Title'})\n",
     "\n",
     "print(top_10_titles_sorted[['Title', 'Number of ratings']].to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " c) Beräkna den genomsnittliga ratingen för dessa 10 filmerna med flest ratings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movieId\n",
+       "1         3.893508\n",
+       "2         3.278179\n",
+       "3         3.171271\n",
+       "4         2.868395\n",
+       "5         3.076957\n",
+       "            ...   \n",
+       "288967    3.500000\n",
+       "288971    0.500000\n",
+       "288975    4.000000\n",
+       "288977    3.000000\n",
+       "288983    3.000000\n",
+       "Name: rating, Length: 83239, dtype: float32"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Group df_ratings by movieId and calculate the mean rating for each movie\n",
+    "average_ratings = df_ratings.groupby('movieId')['rating'].mean()\n",
+    "average_ratings"
    ]
   },
   {
