--- a/labs/Lab1/Code_lab1.ipynb
+++ b/labs/Lab1/Code_lab1.ipynb
@@ -520,36 +520,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "movieId\n",
-       "1         3.893508\n",
-       "2         3.278179\n",
-       "3         3.171271\n",
-       "4         2.868395\n",
-       "5         3.076957\n",
-       "            ...   \n",
-       "288967    3.500000\n",
-       "288971    0.500000\n",
-       "288975    4.000000\n",
-       "288977    3.000000\n",
-       "288983    3.000000\n",
-       "Name: rating, Length: 83239, dtype: float32"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                Title  Number of ratings  Average Rating\n",
+      "                     Shawshank Redemption, The (1994)             122296        4.416792\n",
+      "                                  Forrest Gump (1994)             113581        4.068189\n",
+      "                                  Pulp Fiction (1994)             108756        4.191778\n",
+      "                                   Matrix, The (1999)             107056        4.160631\n",
+      "                     Silence of the Lambs, The (1991)             101802        4.150287\n",
+      "            Star Wars: Episode IV - A New Hope (1977)              97202        4.092401\n",
+      "                                    Fight Club (1999)              86207        4.236019\n",
+      "                              Schindler's List (1993)              84232        4.242337\n",
+      "                                 Jurassic Park (1993)              83026        3.689013\n",
+      "Star Wars: Episode V - The Empire Strikes Back (1980)              80200        4.118030\n"
+     ]
     }
    ],
    "source": [
     "# Group df_ratings by movieId and calculate the mean rating for each movie\n",
     "average_ratings = df_ratings.groupby('movieId')['rating'].mean()\n",
-    "average_ratings"
+    "\n",
+    "# Add column Avarage Rating to sorted titles \n",
+    "top_10_titles_sorted['Average Rating'] = top_10_titles_sorted['movieId'].map(average_ratings)\n",
+    "\n",
+    "print(top_10_titles_sorted[['Title', 'Number of ratings', 'Average Rating']].to_string(index=False))"
    ]
   },
   {
