Continued on exercise 1.3 a

--- a/labs/Lab1/Code_lab1.ipynb
+++ b/labs/Lab1/Code_lab1.ipynb
@@ -170690,8 +170690,52 @@
     "- Tog bort n_neighbors=n_recommendations från vår funkton och satte istället 6 när vi skapar vår knn-modell. \n",
     "- Rensade df_filtered_movies så att index stämmer \n",
     "- Tagit bort model.fit(data) så datan tränades två gånger \n",
-    "Jag börjar med att rensa mina dataframes df_movies och df_ratings och skapar nya dataframes df_filtered_movies och df_filtered_ratings som endast innehåller den data jag vill behålla. Jag tar bort filmer som fått mindre än 10000 ratings, ratings under 3.0 och filmer släppta tidigare än 1980. Därefter skapar jag en pivottabell med \"movieId\" som index, \"userId\" som columns och \"ratings\" som values. Sedan använder jag pivottabellen för att skapa en gles matris med hjälp av scipy.sparse.csr_matrix(). Denna glesa matris lagrar information om icke-noll värden, deras kolumnindex och radpekare. \n",
-    "Efter det skapar jag och tränar min knn-modell emd min sparse matrix som indata. "
+    "\n",
+    "Jag börjar med att rensa mina dataframes 'df_movies' och 'df_ratings' och skapar nya dataframes 'df_filtered_movies' och 'df_filtered_ratings' som endast innehåller den data jag vill behålla. Jag tar bort filmer som fått mindre än 10000 ratings, ratings under 3.0 och filmer släppta tidigare än 1980. Därefter skapar jag en pivottabell med 'movieId' som index, 'userId' som columns och 'ratings' som values. Sedan använder jag pivottabellen för att skapa en gles matris med hjälp av scipy.sparse.csr_matrix(). Denna glesa matris lagrar information om icke-noll värden, deras kolumnindex och radpekare. \n",
+    "\n",
+    "Efter det skapar jag och min knn-modell där metric='cosine' anger att kosinussimilituden ska användas. \n",
+    "Den beräknar kosinus av vinkeln mellan två vektorer, vilket ger en indikation på hur lika de är i riktning oavsett deras storlek. Vilket är bra i detta fall då alla filmer har fått olika många ratings.<br>\n",
+    "algorithm='brute' säger att det är 'brute force'-metoden som ska användas för att jämföra varje punkt med varje annan punkt för att hitta närmaste grannar. \n",
+    "n_neighbors=6 anger att modellen ska hitta de 6 närmsta grannarna för varje punkt (inklusive punkten själv). <br>\n",
+    "Sedan tränas modellen med den glesa matrisen som indata. \n",
+    "Därefter reseterar jag index i den befintliga dataframen 'df_filtered_movies' och kastar bort de tidigare indexen.  \n",
+    "\n",
+    "Funktionen 'recommender' tar in tre parametrar: 'movie_name' som är namnet på den film vi vill ha rekommendationer på. 'data' som i detta fall är den glesa matrisen 'ratings_matrix' och 'model' som är knn-modellen. \n",
+    "extractOne från Fuzzywuzzy används för att hitta en strängmatchning i 'df_filtered_movies' och tar sedan ut index till den film som bäst överrensstämmer med 'movie_name' och sparar i 'idx'. <br>\n",
+    "Sedan används metoden 'kneighbours' för att ta fram de 6 närmaste grannarna (inklusive filmen själb) utifrån 'idx' (indexet på den film vi vill rekommendera filmer utifrån) i den glesa matrisen. Metoden returnerar distanserna och dess index i som sparas i 'distances' och 'indeces'. <br>\n",
+    "<br>\n",
+    "Avslutningsvis så skriver jag ut de rekommenderade filmerna utrifrån resultatet av metoden 'kneighbours'. \n",
+    "Här använder jag iloc för att hämta och skriva ut titeln på filmerna från 'df_filtered_movies' genom deras positionella index. \n",
+    "\n",
+    "\n",
+    "\n",
+    "För att lösa det logiska felet:\n",
+    "I den ursprungliga koden från videon som innhåller ett logiskt fel så tränas knn-modellen två gånger. I min kod tränas modellen endast en gång. \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommender(movie_name, data, model):\n",
+    "     # Using fuzzywuzzy to find a match in df_filtered_movies\n",
+    "    idx=process.extractOne(movie_name, df_filtered_movies[\"title\"])[2]\n",
+    "    print('Movie Selected: ',df_filtered_movies['title'][idx], 'Index: ',idx)\n",
+    "    print('Searching for recommendations.....')\n",
+    "    # Finding nearest neighbours with KNN \n",
+    "    distances, indices=model.kneighbors(data[idx])\n",
+    "    print(f'\\nDistances: {distances.flatten()}')\n",
+    "    print(f'Indices: {indices.flatten()}')\n",
+    "\n",
+    "    print('\\nRecommended movies:')\n",
+    "    for i in indices.flatten():\n",
+    "        if i != idx:\n",
+    "            print(df_filtered_movies.iloc[i]['title'])\n",
+    "recommender('Star wars', ratings_matrix, model_knn)"
    ]
   },
   {
@@ -170700,6 +170744,28 @@
    "source": [
     "b) Leta online och läs vidare om rekommenderarsystem och beskriv kort hur dem fungerar. Glöm inte\n",
     "källhänvisa."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Disease prediction (bonus)\n",
+    "I det här momentet kommer vi jobba med ett dataset med data för hjärt-kärlsjukdom. Börja med att ladda\n",
+    "ned datasetet från Kaggle och läs på vad de olika features betyder. Notera att detta dataset innehåller\n",
+    "många felaktigheter, exempelvis finns negativa blodtryck och blodtryck som är omöjligt höga.\n",
+    "I uppgifterna nedan är ett arbetssätt för data scientist för att undersöka, rengöra data och testa olika\n",
+    "modeller. \n",
+    "\n",
+    "### 2.0 - EDA uppvärmning\n",
+    "Använd pandas, matplotlib och seaborn för att besvara på följande frågor för datasetet:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) Hur många är positiva för hjärt-kärlsjukdom och hur många är negativa?"
    ]
   },
   {
