Done with exercise 1.3 a

--- a/labs/Lab1/Code_lab1.ipynb
+++ b/labs/Lab1/Code_lab1.ipynb
@@ -170643,53 +170643,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Star Wars: Episode V - The Empire Strikes Back (1980)', 90, 1166)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(process.extractOne('Star Wars', df_filtered_movies['title']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "title     Star Wars: Episode V - The Empire Strikes Back...\n",
-       "genres                              Action|Adventure|Sci-Fi\n",
-       "year                                                   1980\n",
-       "Name: 1196, dtype: object"
-      ]
-     },
-     "execution_count": 249,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_filtered_movies.loc[1196]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Beskriv med ord hur ditt system fungerar.\n",
-    "- Tog bort n_neighbors=n_recommendations från vår funkton och satte istället 6 när vi skapar vår knn-modell. \n",
-    "- Rensade df_filtered_movies så att index stämmer \n",
-    "- Tagit bort model.fit(data) så datan tränades två gånger \n",
+    "a) Beskriv med ord hur ditt system fungerar:\n",
     "\n",
     "Jag börjar med att rensa mina dataframes 'df_movies' och 'df_ratings' och skapar nya dataframes 'df_filtered_movies' och 'df_filtered_ratings' som endast innehåller den data jag vill behålla. Jag tar bort filmer som fått mindre än 10000 ratings, ratings under 3.0 och filmer släppta tidigare än 1980. Därefter skapar jag en pivottabell med 'movieId' som index, 'userId' som columns och 'ratings' som values. Sedan använder jag pivottabellen för att skapa en gles matris med hjälp av scipy.sparse.csr_matrix(). Denna glesa matris lagrar information om icke-noll värden, deras kolumnindex och radpekare. \n",
     "\n",
@@ -170704,15 +170661,20 @@
     "extractOne från Fuzzywuzzy används för att hitta en strängmatchning i 'df_filtered_movies' och tar sedan ut index till den film som bäst överrensstämmer med 'movie_name' och sparar i 'idx'. <br>\n",
     "Sedan används metoden 'kneighbours' för att ta fram de 6 närmaste grannarna (inklusive filmen själb) utifrån 'idx' (indexet på den film vi vill rekommendera filmer utifrån) i den glesa matrisen. Metoden returnerar distanserna och dess index i som sparas i 'distances' och 'indeces'. <br>\n",
     "<br>\n",
-    "Avslutningsvis så skriver jag ut de rekommenderade filmerna utrifrån resultatet av metoden 'kneighbours'. \n",
+    "Avslutningsvis så skriver jag ut de rekommenderade filmerna. \n",
     "Här använder jag iloc för att hämta och skriva ut titeln på filmerna från 'df_filtered_movies' genom deras positionella index. \n",
-    "\n",
-    "\n",
-    "\n",
-    "För att lösa det logiska felet:\n",
-    "I den ursprungliga koden från videon som innhåller ett logiskt fel så tränas knn-modellen två gånger. I min kod tränas modellen endast en gång. \n",
-    "\n",
-    "\n"
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "Lösning av det logiska felet:<br>\n",
+    "I mitt recommender system har jag utgått från den kod som skapas i videon men gjort en del ändringar, jag har bland annat löst det logiska felet. Detta gör jag genom att reseta index samt använda iloc vid utskrift av titlar.  \n",
+    "<br>\n",
+    "När jag till en början rensade datan i 'df_filtered_movies' och 'df_filtered_ratings'så rensade jag endast 'df_filtered_ratings' då det var denna jag skulle använda till att skapa pivottabellen och den glesa matrisen. Problemet när jag sedan skulle söka fram titel ur 'df_filtered_movies' var att de innehöll olika filmer. Därför behövde jag gå tillbaka och rensa så att 'df_filtered_movies' och 'df_filtered_ratings' innehåller samma filmer.  \n",
+    "För att vi ska kunna skriva ut rätt rekommendationer behöver vi även göra en reset av index i 'df_filtered_movies', detta så att dess index stämmer överrens med de returnerade indexen från knn-modellen.\n",
+    "<br>\n",
+    "<br>\n",
+    "I koden som används i videon så tar funktionen 'recommender' in 4 parametrar istället för 3 som i mitt recommender system. Jag tog bort n_recommendations då jag istället sätter n_neighbors=6 direkt när jag skapar knn-modellen.  \n",
+    "I koden som används i videon så tränas knn-modellen dessutom två gånger. En gång innan funktionen 'recommender' och en gång i funktionen. Jag har tagit bort kodstycket i funktionen då det kan ha flera nackdelar att träna flera gånger på samma dataset särskilt när det gäller effektivitet. \n"
    ]
   },
   {
@@ -170720,7 +170682,10 @@
    "metadata": {},
    "source": [
     "b) Leta online och läs vidare om rekommenderarsystem och beskriv kort hur dem fungerar. Glöm inte\n",
-    "källhänvisa."
+    "källhänvisa. Källhänvisning:\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
