--- a/labs/Lab1/Code_lab1.ipynb
+++ b/labs/Lab1/Code_lab1.ipynb
@@ -169238,7 +169238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170038,30 +170038,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[4., 5., 0., 0., 0., 0., 4., 0., 0., 3.],\n",
-       "        [0., 3., 0., 0., 0., 0., 0., 0., 4., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 3., 0., 5., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 3., 0.],\n",
-       "        [0., 4., 0., 0., 0., 0., 0., 0., 4., 0.]], dtype=float32)"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ratings_matrix[:5,:10].todense()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -170559,7 +170535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170569,7 +170545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -170610,48 +170586,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       movieId                                              title  \\\n",
-      "1166      1196  Star Wars: Episode V - The Empire Strikes Back...   \n",
-      "1179      1210  Star Wars: Episode VI - Return of the Jedi (1983)   \n",
-      "2537      2628   Star Wars: Episode I - The Phantom Menace (1999)   \n",
-      "5271      5378  Star Wars: Episode II - Attack of the Clones (...   \n",
-      "9954     33493  Star Wars: Episode III - Revenge of the Sith (...   \n",
-      "25107   122886  Star Wars: Episode VII - The Force Awakens (2015)   \n",
-      "44178   166528                Rogue One: A Star Wars Story (2016)   \n",
-      "\n",
-      "                                     genres  year  \n",
-      "1166                Action|Adventure|Sci-Fi  1980  \n",
-      "1179                Action|Adventure|Sci-Fi  1983  \n",
-      "2537                Action|Adventure|Sci-Fi  1999  \n",
-      "5271           Action|Adventure|Sci-Fi|IMAX  2002  \n",
-      "9954                Action|Adventure|Sci-Fi  2005  \n",
-      "25107  Action|Adventure|Fantasy|Sci-Fi|IMAX  2015  \n",
-      "44178       Action|Adventure|Fantasy|Sci-Fi  2016  \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_filtered_movies[df_filtered_movies['title'].str.contains('Star Wars')])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Beskriv med ord hur ditt system fungerar:\n",
+    "__a) Beskriv med ord hur ditt system fungerar:__\n",
     "\n",
     "Jag börjar med att rensa mina dataframes 'df_movies' och 'df_ratings' och skapar nya dataframes 'df_filtered_movies' och 'df_filtered_ratings' som endast innehåller den data jag vill behålla. Jag tar bort filmer som fått mindre än 10000 ratings, ratings under 3.0 och filmer släppta tidigare än 1980. Därefter skapar jag en pivottabell med 'movieId' som index, 'userId' som columns och 'ratings' som values. Sedan använder jag pivottabellen för att skapa en gles matris med hjälp av scipy.sparse.csr_matrix(). Denna glesa matris lagrar information om icke-noll värden, deras kolumnindex och radpekare. \n",
     "\n",
     "Efter det skapar jag och min knn-modell där metric='cosine' anger att kosinussimilituden ska användas. \n",
-    "Den beräknar kosinus av vinkeln mellan två vektorer, vilket ger en indikation på hur lika de är i riktning oavsett deras storlek. Vilket är bra i detta fall då alla filmer har fått olika många ratings.<br>\n",
+    "Den beräknar kosinus av vinkeln mellan två vektorer, vilket ger en indikation på hur lika de är i riktning oavsett deras storlek. Vilket är bra i detta fall då alla filmer har fått olika många ratings.\n",
     "algorithm='brute' säger att det är 'brute force'-metoden som ska användas för att jämföra varje punkt med varje annan punkt för att hitta närmaste grannar. \n",
     "n_neighbors=6 anger att modellen ska hitta de 6 närmsta grannarna för varje punkt (inklusive punkten själv). <br>\n",
     "Sedan tränas modellen med den glesa matrisen som indata. \n",
@@ -170681,9 +170624,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) Leta online och läs vidare om rekommenderarsystem och beskriv kort hur dem fungerar. Glöm inte\n",
-    "källhänvisa. Källhänvisning:\n",
+    "__b) Leta online och läs vidare om rekommenderarsystem och beskriv kort hur dem fungerar. Glöm inte\n",
+    "källhänvisa.__\n",
     "\n",
+    "\n",
+    "Det finns olika metoder för att bygga rekommenderingssystem. Några av dessa är innehållsbaserad filtrering, kollaborativ filtrering, hybridrekommendationer och kontextbaserade rekommendationer.\n",
+    "\n",
+    "Innehållsbaserad filtrering rekommenderar produkter baserat på vad användaren gillar eller har intereagerat med. Om vi till exempel ska rekommenderara filmer till en användare så tittar vi på vilka filmer användaren tittat på/gillat och rekommenderar en liknande film. Exempelvis en film av samma genre, gjord av samma regissör eller med samma skådespelare. \n",
+    "\n",
+    "Kollaborativ filtrering är en väl etablerad metod inom rekommendationssystem och delas vanligtvis in i två huvudkategorier: User-to-user och Item-to-item.\n",
+    "User-to-user: Denna teknik hittar en användare med liknande preferenser och föreslår sedan produkter som den andra användaren gillat.\n",
+    "Ite-to-item: Syftar till att rekommendera produkter till användare baserat på likheter mellan produkterna själva, snarare än användarens individuella preferenser.  \n",
+    "Detta för att produkter som liknar varandra tenderar att attrahera samma typer av användare. \n",
+    "\n",
+    "Hybridrekommendationer kombinerar innehållsbaserade och kollaborativa metoder för att ge bättre rekommendationer.\n",
+    "\n",
+    "Kontextbaserade system tar hänsyn till ytterligare kontextuell information som tid på dagen, plats eller till och med användarens enhet för att anpassa rekommendationerna. Till exempel kan en streamingtjänst rekommendera lugn musik på kvällen. \n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "Källhänvisning:<br>\n",
+    "ChatGPT<br>\n",
+    "https://www.youtube.com/watch?v=n3RKsY2H-NE&ab_channel=ArtoftheProblem<br>\n",
+    "https://help.netflix.com/sv/node/100639\n",
     "\n",
     "\n"
    ]
@@ -171067,13 +171031,6 @@
    "source": [
     "c) Hur ser åldersfördelningen ut? Rita ett histogram."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
